rnsc/tests/snapshots/error-parser-type_hints-fieldref-no_operand_3.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class   @fieldref MyClass fieldName ; no descriptor provided
.super java/lang/Object
----- STDERR -----
[E-014] Error: '@fieldref' type hint is missing its field descriptor
   ╭─[ test_data/integration/error/parser/type_hints/fieldref/no_operand_3.rns:1:10 ]
   │
 1 │ .class   @fieldref MyClass fieldName ; no descriptor provided
   │          ────┬────                  │ 
   │              ╰──────────────────────── forces explicit field reference constant pool type
   │                                     │ 
   │                                     ╰─ but field descriptor is missing
   │ 
   │ Help: Provide the value immediately after the hint:
   │       @fieldref <class_name> <field_name> <field_descriptor>
   │       
   │       For example:
   │       @fieldref java/lang/System out Ljava/io/PrintStream;
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-014
───╯
----- HASH -----
not generated
