rnsc/tests/snapshots/error-parser-type_hints-fieldref-trailing_token_recovers.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@fieldref'
   ╭─[ test_data/integration/error/parser/type_hints/fieldref/trailing_token_recovers.rns:1:58 ]
   │
 1 │ .class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
   │        ────┬────                                         ────┬───  
   │            ╰─────────────────────────────────────────────────────── '@fieldref' type hint takes 3 operands
   │                                                              │     
   │                                                              ╰───── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-013
───╯
[W-001] Warning: missing super directive
   ╭─[ test_data/integration/error/parser/type_hints/fieldref/trailing_token_recovers.rns:1:1 ]
   │
 1 │ .class @fieldref MyClass fieldName Ljava/io/PrintStream; trailing
   │ ───┬──  
   │    ╰──── class 'Some(Fieldref(RefTypeHint { hint_span: Some(Span { byte_start: 7, byte_end: 16, line: 0, col_start: 7, col_end: 16 }), class: Spanned { value: "MyClass", span: Span { byte_start: 17, byte_end: 24, line: 0, col_start: 17, col_end: 24 } }, name: Spanned { value: "fieldName", span: Span { byte_start: 25, byte_end: 34, line: 0, col_start: 25, col_end: 34 } }, descriptor: Spanned { value: "Ljava/io/PrintStream;", span: Span { byte_start: 35, byte_end: 56, line: 0, col_start: 35, col_end: 56 } } }))' is missing a '.super' directive
   │ 
   │ Note: The .super directive is required to specify the superclass. Defaulting to 'java/lang/Object'.
───╯
----- HASH -----
not generated
